GH-10083: Nullability for graph in core module
Related to: https://github.com/spring-projects/spring-integration/issues/10083

* Add Nullability to core module's graph package.
* `buildGraph` and `getGraph` methods in the `IntegrationGraphServer` because Nullify could not see the creation of the graph
* `IntegrationGraphServer.receiptListRoutingHandler` required a change where the messageChannel could not be null in the `map` portion of expression.  So it was extracted into a var and the var was checked for null.

Update local variables to be used consistently

Remove unnecessary Nullable annotations

* Set AppContext to not be nullable
* Consumer's inbound channels are never null. Update to remove nullable
* Update outbound channels so they are not nullable
* Use local variable trick to work past Nullables inability to see a new above return value
* Add contract to channelToBeanName in IntegrationGraphServer